# tfg

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  known.py  package.json  requirements.txt  tasks.py
.github/: pull_request_template.md
.github/workflows/: release.yml  spell.yml  tests.yml
doc/: Makefile  bibliografia.bib  proyecto.tex
doc/portada/: portada.tex
doc/prefacios/: prefacio.tex
doc/scripts/: plots.py
doc/secciones/: 01_introduccion.tex  02_descripcion.tex  03_estado_del_arte.tex  04_planificacion.tex  06_implementacion.tex  07_conclusiones.tex  eleccion_dms.tex  introduccion_matematica.tex  resultados.tex  word2vec.tex
hooks/: pre-commit
slides/: TeiPel_En_Beamer_Layout.sty  main.tex
src/: README.md  dataset.py  graphics3.py  main.py  main2.py  model.pickle  pyproject.toml
src/.Tropes-cache/: weight_hidden_output.csv  weight_input_hidden.csv
src/any2vec/: any2vec.py  data.py  embedding.py  graphics.py  graphics2.py  learning_rate.py  model_runner.py  one_hot_encoder.py  one_hot_encoding.py  training_data.py  vocabulary.py
src/any2vec/anys/: tropes.py  words.py
src/model/: any2vec.py  data.py  model_runner.py  one_hot_encoder.py  training_data.py  vocabulary.py
src/model/anys/: tropes.py  words.py
src/scripts/: get_data_set.py
src/tests/model/: test_any2vec.py  test_data.py  test_learning_rate.py  test_one_hot_encoders.py  test_training_data.py  test_vocabulary.py
src/tests/model/anys/: test_words.py
src/tests/scripts/: test_get_dataset.py
src/tests/utils/: test_filesystem.py
src/utils/: filesystem.py
