[tool.poetry]
name = "model"
version = "0.1.0"
description = "Any2Word implementation"
authors = ["antoniogamizdelgado <antoniogamiz10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
numpy = "^1.23.4"
pytest = "^7.1.3"

[tool.poetry.scripts]
get_data_set = 'scripts.get_data_set:main'
start = 'main:main'
clean = 'scripts.get_data_set:clean'
test = 'scripts.test:test'

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ['scripts']
