[tool.poetry]
name = "any2vec"
version = "0.1.0"
description = "Any2Word implementation"
authors = ["antoniogamizdelgado <antoniogamiz10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
numpy = "^1.23.4"
pytest = "^7.1.3"
scipy = "^1.9.3"
sklearn = "^0.0.post1"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"

[tool.poetry.scripts]
get_data_set = 'scripts.get_data_set:main'
start = 'main:main'
start2 = 'main2:main'
start3 = 'graphics3:main'
clean = 'scripts.get_data_set:clean'

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ['scripts']
